Renamed CFE model to CLINEAR

--- a/r-inla.org/doc/hyper/group/ar1.tex
+++ b/r-inla.org/doc/hyper/group/ar1.tex
@@ -11,8 +11,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] normal
 	 	 	\item[param] 0 0.15
-	 	 	\item[to.theta] \verb|function(x) log((1+x)/(1-x))|
-	 	 	\item[from.theta] \verb|function(x) 2*exp(x)/(1+exp(x))-1|
+	 	 	\item[to.theta] \verb!function(x) log((1+x)/(1-x))!
+	 	 	\item[from.theta] \verb!function(x) 2*exp(x)/(1+exp(x))-1!
 	 	 \end{description}
 	 \end{description}
 \end{description}
