--- a/r-inla.org/doc/hyper/latent/iid1d.tex
+++ b/r-inla.org/doc/hyper/latent/iid1d.tex
@@ -11,8 +11,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] wishart1d
 	 	 	\item[param] 2 1e-04
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 \end{description}
 	\item[constr] FALSE
