--- a/r-inla.org/doc/hyper/latent/iid3d.tex
+++ b/r-inla.org/doc/hyper/latent/iid3d.tex
@@ -11,8 +11,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] wishart3d
 	 	 	\item[param] 7 1 1 1 0 0 0
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta2]\ 
 	 	 \begin{description}
@@ -22,8 +22,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta3]\ 
 	 	 \begin{description}
@@ -33,8 +33,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta4]\ 
 	 	 \begin{description}
@@ -44,8 +44,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) log((1+x)/(1-x))|
-	 	 	\item[from.theta] \verb|function(x) 2*exp(x)/(1+exp(x))-1|
+	 	 	\item[to.theta] \verb!function(x) log((1+x)/(1-x))!
+	 	 	\item[from.theta] \verb!function(x) 2*exp(x)/(1+exp(x))-1!
 	 	 \end{description}
 	 	\item[theta5]\ 
 	 	 \begin{description}
@@ -55,8 +55,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) log((1+x)/(1-x))|
-	 	 	\item[from.theta] \verb|function(x) 2*exp(x)/(1+exp(x))-1|
+	 	 	\item[to.theta] \verb!function(x) log((1+x)/(1-x))!
+	 	 	\item[from.theta] \verb!function(x) 2*exp(x)/(1+exp(x))-1!
 	 	 \end{description}
 	 	\item[theta6]\ 
 	 	 \begin{description}
@@ -66,8 +66,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) log((1+x)/(1-x))|
-	 	 	\item[from.theta] \verb|function(x) 2*exp(x)/(1+exp(x))-1|
+	 	 	\item[to.theta] \verb!function(x) log((1+x)/(1-x))!
+	 	 	\item[from.theta] \verb!function(x) 2*exp(x)/(1+exp(x))-1!
 	 	 \end{description}
 	 \end{description}
 	\item[constr] FALSE
