--- a/r-inla.org/doc/hyper/latent/mec.tex
+++ b/r-inla.org/doc/hyper/latent/mec.tex
@@ -11,8 +11,8 @@
 	 	 	\item[param] 1 0.001
 	 	 	\item[initial] 1
 	 	 	\item[fixed] FALSE
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta2]\ 
 	 	 \begin{description}
@@ -22,8 +22,8 @@
 	 	 	\item[param] 1 1e-04
 	 	 	\item[initial] 9.21034037197618
 	 	 	\item[fixed] TRUE
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta3]\ 
 	 	 \begin{description}
@@ -33,8 +33,8 @@
 	 	 	\item[param] 0 1e-04
 	 	 	\item[initial] 0
 	 	 	\item[fixed] TRUE
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta4]\ 
 	 	 \begin{description}
@@ -44,8 +44,8 @@
 	 	 	\item[param] 1 10000
 	 	 	\item[initial] -9.21034037197618
 	 	 	\item[fixed] TRUE
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 \end{description}
 	\item[constr] FALSE
