--- a/r-inla.org/doc/hyper/latent/spde.tex
+++ b/r-inla.org/doc/hyper/latent/spde.tex
@@ -11,8 +11,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] normal
 	 	 	\item[param] 0 1
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta2]\ 
 	 	 \begin{description}
@@ -22,8 +22,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] normal
 	 	 	\item[param] 0 1
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta3]\ 
 	 	 \begin{description}
@@ -33,8 +33,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] normal
 	 	 	\item[param] 0 1
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta4]\ 
 	 	 \begin{description}
@@ -44,8 +44,8 @@
 	 	 	\item[fixed] TRUE
 	 	 	\item[prior] normal
 	 	 	\item[param] 0 0.2
-	 	 	\item[to.theta] \verb|function(x) log(x/(1-x))|
-	 	 	\item[from.theta] \verb|function(x) exp(x)/(1+exp(x))|
+	 	 	\item[to.theta] \verb!function(x) log(x/(1-x))!
+	 	 	\item[from.theta] \verb!function(x) exp(x)/(1+exp(x))!
 	 	 \end{description}
 	 \end{description}
 	\item[constr] FALSE
