--- a/r-inla.org/doc/hyper/latent/spde2.tex
+++ b/r-inla.org/doc/hyper/latent/spde2.tex
@@ -11,8 +11,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] mvnorm
 	 	 	\item[param] 1 1
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta2]\ 
 	 	 \begin{description}
@@ -22,8 +22,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta3]\ 
 	 	 \begin{description}
@@ -33,8 +33,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta4]\ 
 	 	 \begin{description}
@@ -44,8 +44,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta5]\ 
 	 	 \begin{description}
@@ -55,8 +55,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta6]\ 
 	 	 \begin{description}
@@ -66,8 +66,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta7]\ 
 	 	 \begin{description}
@@ -77,8 +77,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta8]\ 
 	 	 \begin{description}
@@ -88,8 +88,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta9]\ 
 	 	 \begin{description}
@@ -99,8 +99,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta10]\ 
 	 	 \begin{description}
@@ -110,8 +110,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta11]\ 
 	 	 \begin{description}
@@ -121,8 +121,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta12]\ 
 	 	 \begin{description}
@@ -132,8 +132,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta13]\ 
 	 	 \begin{description}
@@ -143,8 +143,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta14]\ 
 	 	 \begin{description}
@@ -154,8 +154,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta15]\ 
 	 	 \begin{description}
@@ -165,8 +165,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta16]\ 
 	 	 \begin{description}
@@ -176,8 +176,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta17]\ 
 	 	 \begin{description}
@@ -187,8 +187,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta18]\ 
 	 	 \begin{description}
@@ -198,8 +198,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta19]\ 
 	 	 \begin{description}
@@ -209,8 +209,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta20]\ 
 	 	 \begin{description}
@@ -220,8 +220,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta21]\ 
 	 	 \begin{description}
@@ -231,8 +231,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta22]\ 
 	 	 \begin{description}
@@ -242,8 +242,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta23]\ 
 	 	 \begin{description}
@@ -253,8 +253,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta24]\ 
 	 	 \begin{description}
@@ -264,8 +264,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta25]\ 
 	 	 \begin{description}
@@ -275,8 +275,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta26]\ 
 	 	 \begin{description}
@@ -286,8 +286,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta27]\ 
 	 	 \begin{description}
@@ -297,8 +297,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta28]\ 
 	 	 \begin{description}
@@ -308,8 +308,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta29]\ 
 	 	 \begin{description}
@@ -319,8 +319,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta30]\ 
 	 	 \begin{description}
@@ -330,8 +330,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta31]\ 
 	 	 \begin{description}
@@ -341,8 +341,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta32]\ 
 	 	 \begin{description}
@@ -352,8 +352,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta33]\ 
 	 	 \begin{description}
@@ -363,8 +363,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta34]\ 
 	 	 \begin{description}
@@ -374,8 +374,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta35]\ 
 	 	 \begin{description}
@@ -385,8 +385,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta36]\ 
 	 	 \begin{description}
@@ -396,8 +396,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta37]\ 
 	 	 \begin{description}
@@ -407,8 +407,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta38]\ 
 	 	 \begin{description}
@@ -418,8 +418,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta39]\ 
 	 	 \begin{description}
@@ -429,8 +429,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta40]\ 
 	 	 \begin{description}
@@ -440,8 +440,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta41]\ 
 	 	 \begin{description}
@@ -451,8 +451,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta42]\ 
 	 	 \begin{description}
@@ -462,8 +462,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta43]\ 
 	 	 \begin{description}
@@ -473,8 +473,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta44]\ 
 	 	 \begin{description}
@@ -484,8 +484,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta45]\ 
 	 	 \begin{description}
@@ -495,8 +495,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta46]\ 
 	 	 \begin{description}
@@ -506,8 +506,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta47]\ 
 	 	 \begin{description}
@@ -517,8 +517,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta48]\ 
 	 	 \begin{description}
@@ -528,8 +528,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta49]\ 
 	 	 \begin{description}
@@ -539,8 +539,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta50]\ 
 	 	 \begin{description}
@@ -550,8 +550,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta51]\ 
 	 	 \begin{description}
@@ -561,8 +561,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta52]\ 
 	 	 \begin{description}
@@ -572,8 +572,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta53]\ 
 	 	 \begin{description}
@@ -583,8 +583,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta54]\ 
 	 	 \begin{description}
@@ -594,8 +594,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta55]\ 
 	 	 \begin{description}
@@ -605,8 +605,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta56]\ 
 	 	 \begin{description}
@@ -616,8 +616,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta57]\ 
 	 	 \begin{description}
@@ -627,8 +627,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta58]\ 
 	 	 \begin{description}
@@ -638,8 +638,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta59]\ 
 	 	 \begin{description}
@@ -649,8 +649,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta60]\ 
 	 	 \begin{description}
@@ -660,8 +660,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta61]\ 
 	 	 \begin{description}
@@ -671,8 +671,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta62]\ 
 	 	 \begin{description}
@@ -682,8 +682,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta63]\ 
 	 	 \begin{description}
@@ -693,8 +693,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta64]\ 
 	 	 \begin{description}
@@ -704,8 +704,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta65]\ 
 	 	 \begin{description}
@@ -715,8 +715,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta66]\ 
 	 	 \begin{description}
@@ -726,8 +726,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta67]\ 
 	 	 \begin{description}
@@ -737,8 +737,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta68]\ 
 	 	 \begin{description}
@@ -748,8 +748,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta69]\ 
 	 	 \begin{description}
@@ -759,8 +759,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta70]\ 
 	 	 \begin{description}
@@ -770,8 +770,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta71]\ 
 	 	 \begin{description}
@@ -781,8 +781,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta72]\ 
 	 	 \begin{description}
@@ -792,8 +792,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta73]\ 
 	 	 \begin{description}
@@ -803,8 +803,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta74]\ 
 	 	 \begin{description}
@@ -814,8 +814,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta75]\ 
 	 	 \begin{description}
@@ -825,8 +825,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta76]\ 
 	 	 \begin{description}
@@ -836,8 +836,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta77]\ 
 	 	 \begin{description}
@@ -847,8 +847,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta78]\ 
 	 	 \begin{description}
@@ -858,8 +858,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta79]\ 
 	 	 \begin{description}
@@ -869,8 +869,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta80]\ 
 	 	 \begin{description}
@@ -880,8 +880,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta81]\ 
 	 	 \begin{description}
@@ -891,8 +891,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta82]\ 
 	 	 \begin{description}
@@ -902,8 +902,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta83]\ 
 	 	 \begin{description}
@@ -913,8 +913,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta84]\ 
 	 	 \begin{description}
@@ -924,8 +924,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta85]\ 
 	 	 \begin{description}
@@ -935,8 +935,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta86]\ 
 	 	 \begin{description}
@@ -946,8 +946,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta87]\ 
 	 	 \begin{description}
@@ -957,8 +957,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta88]\ 
 	 	 \begin{description}
@@ -968,8 +968,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta89]\ 
 	 	 \begin{description}
@@ -979,8 +979,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta90]\ 
 	 	 \begin{description}
@@ -990,8 +990,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta91]\ 
 	 	 \begin{description}
@@ -1001,8 +1001,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta92]\ 
 	 	 \begin{description}
@@ -1012,8 +1012,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta93]\ 
 	 	 \begin{description}
@@ -1023,8 +1023,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta94]\ 
 	 	 \begin{description}
@@ -1034,8 +1034,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta95]\ 
 	 	 \begin{description}
@@ -1045,8 +1045,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta96]\ 
 	 	 \begin{description}
@@ -1056,8 +1056,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta97]\ 
 	 	 \begin{description}
@@ -1067,8 +1067,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta98]\ 
 	 	 \begin{description}
@@ -1078,8 +1078,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta99]\ 
 	 	 \begin{description}
@@ -1089,8 +1089,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta100]\ 
 	 	 \begin{description}
@@ -1100,8 +1100,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] none
 	 	 	\item[param] 
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 \end{description}
 	\item[constr] FALSE
