--- a/r-inla.org/doc/hyper/likelihood/gpoisson.tex
+++ b/r-inla.org/doc/hyper/likelihood/gpoisson.tex
@@ -11,8 +11,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 1
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta2]\ 
 	 	 \begin{description}
@@ -22,8 +22,8 @@
 	 	 	\item[fixed] TRUE
 	 	 	\item[prior] normal
 	 	 	\item[param] 1 100
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 \end{description}
 	\item[survival] FALSE
