--- a/r-inla.org/doc/hyper/link/test1.tex
+++ b/r-inla.org/doc/hyper/link/test1.tex
@@ -11,8 +11,8 @@
 	 	 	\item[param] 0 100
 	 	 	\item[initial] 0
 	 	 	\item[fixed] FALSE
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 \end{description}
 \end{description}
