--- a/r-inla.org/doc/hyper/group/rw2.tex
+++ b/r-inla.org/doc/hyper/group/rw2.tex
@@ -11,8 +11,8 @@
 	 	 	\item[param] 1 5e-05
 	 	 	\item[initial] 0
 	 	 	\item[fixed] TRUE
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 \end{description}
 \end{description}
