--- a/r-inla.org/doc/hyper/latent/ar1.tex
+++ b/r-inla.org/doc/hyper/latent/ar1.tex
@@ -11,8 +11,8 @@
 	 	 	\item[param] 1 5e-05
 	 	 	\item[initial] 4
 	 	 	\item[fixed] FALSE
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta2]\ 
 	 	 \begin{description}
@@ -22,8 +22,8 @@
 	 	 	\item[param] 0 0.15
 	 	 	\item[initial] 2
 	 	 	\item[fixed] FALSE
-	 	 	\item[to.theta] \verb|function(x) log((1+x)/(1-x))|
-	 	 	\item[from.theta] \verb|function(x) 2*exp(x)/(1+exp(x))-1|
+	 	 	\item[to.theta] \verb!function(x) log((1+x)/(1-x))!
+	 	 	\item[from.theta] \verb!function(x) 2*exp(x)/(1+exp(x))-1!
 	 	 \end{description}
 	 \end{description}
 	\item[constr] FALSE
