--- a/r-inla.org/doc/hyper/latent/besagproper.tex
+++ b/r-inla.org/doc/hyper/latent/besagproper.tex
@@ -11,8 +11,8 @@
 	 	 	\item[param] 1 5e-04
 	 	 	\item[initial] 2
 	 	 	\item[fixed] FALSE
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta2]\ 
 	 	 \begin{description}
@@ -22,8 +22,8 @@
 	 	 	\item[param] 1 1
 	 	 	\item[initial] 1
 	 	 	\item[fixed] FALSE
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 \end{description}
 	\item[constr] FALSE
