--- a/r-inla.org/doc/hyper/latent/bym2.tex
+++ b/r-inla.org/doc/hyper/latent/bym2.tex
@@ -11,8 +11,8 @@
 	 	 	\item[param] 1 0.01
 	 	 	\item[initial] 4
 	 	 	\item[fixed] FALSE
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta2]\ 
 	 	 \begin{description}
@@ -22,8 +22,8 @@
 	 	 	\item[param] 0.5 -1
 	 	 	\item[initial] -3
 	 	 	\item[fixed] FALSE
-	 	 	\item[to.theta] \verb|function(x) log(x/(1-x))|
-	 	 	\item[from.theta] \verb|function(x) exp(x)/(1+exp(x))|
+	 	 	\item[to.theta] \verb!function(x) log(x/(1-x))!
+	 	 	\item[from.theta] \verb!function(x) exp(x)/(1+exp(x))!
 	 	 \end{description}
 	 \end{description}
 	\item[constr] TRUE
