--- a/r-inla.org/doc/hyper/latent/slm.tex
+++ b/r-inla.org/doc/hyper/latent/slm.tex
@@ -11,8 +11,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 5e-05
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta2]\ 
 	 	 \begin{description}
@@ -22,8 +22,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] normal
 	 	 	\item[param] 0 10
-	 	 	\item[to.theta] \verb|function(x) log(x/(1-x))|
-	 	 	\item[from.theta] \verb|function(x) 1/(1+exp(-x))|
+	 	 	\item[to.theta] \verb!function(x) log(x/(1-x))!
+	 	 	\item[from.theta] \verb!function(x) 1/(1+exp(-x))!
 	 	 \end{description}
 	 \end{description}
 	\item[constr] FALSE
