--- a/r-inla.org/doc/hyper/likelihood/sn.tex
+++ b/r-inla.org/doc/hyper/likelihood/sn.tex
@@ -20,8 +20,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] gaussian
 	 	 	\item[param] 0 10
-	 	 	\item[to.theta] \verb|function(x, shape.max = 1) log((1+x/shape.max)/(1-x/shape.max))|
-	 	 	\item[from.theta] \verb|function(x, shape.max = 1) shape.max*(2*exp(x)/(1+exp(x))-1)|
+	 	 	\item[to.theta] \verb!function(x, shape.max = 1) log((1+x/shape.max)/(1-x/shape.max))!
+	 	 	\item[from.theta] \verb!function(x, shape.max = 1) shape.max*(2*exp(x)/(1+exp(x))-1)!
 	 	 \end{description}
 	 \end{description}
 	\item[survival] FALSE
