--- a/r-inla.org/doc/hyper/likelihood/stochvolnig.tex
+++ b/r-inla.org/doc/hyper/likelihood/stochvolnig.tex
@@ -11,8 +11,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] gaussian
 	 	 	\item[param] 0 10
-	 	 	\item[to.theta] \verb|function(x) x|
-	 	 	\item[from.theta] \verb|function(x) x|
+	 	 	\item[to.theta] \verb!function(x) x!
+	 	 	\item[from.theta] \verb!function(x) x!
 	 	 \end{description}
 	 	\item[theta2]\ 
 	 	 \begin{description}
@@ -22,8 +22,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 0.5
-	 	 	\item[to.theta] \verb|function(x) log(x-1)|
-	 	 	\item[from.theta] \verb|function(x) 1+exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x-1)!
+	 	 	\item[from.theta] \verb!function(x) 1+exp(x)!
 	 	 \end{description}
 	 \end{description}
 	\item[survival] FALSE
