--- a/r-inla.org/doc/hyper/likelihood/stochvolt.tex
+++ b/r-inla.org/doc/hyper/likelihood/stochvolt.tex
@@ -11,8 +11,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 0.5
-	 	 	\item[to.theta] \verb|function(x) log(x-2)|
-	 	 	\item[from.theta] \verb|function(x) 2+exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x-2)!
+	 	 	\item[from.theta] \verb!function(x) 2+exp(x)!
 	 	 \end{description}
 	 \end{description}
 	\item[survival] FALSE
