--- a/r-inla.org/doc/hyper/likelihood/t.tex
+++ b/r-inla.org/doc/hyper/likelihood/t.tex
@@ -11,8 +11,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 5e-05
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta2]\ 
 	 	 \begin{description}
@@ -22,8 +22,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 0.5
-	 	 	\item[to.theta] \verb|function(x) log(x-2)|
-	 	 	\item[from.theta] \verb|function(x) 2+exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x-2)!
+	 	 	\item[from.theta] \verb!function(x) 2+exp(x)!
 	 	 \end{description}
 	 \end{description}
 	\item[survival] FALSE
