--- a/r-inla.org/doc/hyper/likelihood/tstrata.tex
+++ b/r-inla.org/doc/hyper/likelihood/tstrata.tex
@@ -11,8 +11,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 0.01
-	 	 	\item[to.theta] \verb|function(x) log(x-5)|
-	 	 	\item[from.theta] \verb|function(x) 5+exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x-5)!
+	 	 	\item[from.theta] \verb!function(x) 5+exp(x)!
 	 	 \end{description}
 	 	\item[theta2]\ 
 	 	 \begin{description}
@@ -22,8 +22,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 5e-05
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta3]\ 
 	 	 \begin{description}
@@ -33,8 +33,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 5e-05
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta4]\ 
 	 	 \begin{description}
@@ -44,8 +44,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 5e-05
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta5]\ 
 	 	 \begin{description}
@@ -55,8 +55,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 5e-05
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta6]\ 
 	 	 \begin{description}
@@ -66,8 +66,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 5e-05
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta7]\ 
 	 	 \begin{description}
@@ -77,8 +77,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 5e-05
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta8]\ 
 	 	 \begin{description}
@@ -88,8 +88,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 5e-05
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta9]\ 
 	 	 \begin{description}
@@ -99,8 +99,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 5e-05
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta10]\ 
 	 	 \begin{description}
@@ -110,8 +110,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 5e-05
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 	\item[theta11]\ 
 	 	 \begin{description}
@@ -121,8 +121,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 5e-05
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 \end{description}
 	\item[survival] FALSE
