--- a/r-inla.org/doc/hyper/likelihood/wrappedcauchy.tex
+++ b/r-inla.org/doc/hyper/likelihood/wrappedcauchy.tex
@@ -11,8 +11,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] loggamma
 	 	 	\item[param] 1 0.005
-	 	 	\item[to.theta] \verb|function(x) log(x/(1-x))|
-	 	 	\item[from.theta] \verb|function(x) exp(x)/(1+exp(x))|
+	 	 	\item[to.theta] \verb!function(x) log(x/(1-x))!
+	 	 	\item[from.theta] \verb!function(x) exp(x)/(1+exp(x))!
 	 	 \end{description}
 	 \end{description}
 	\item[survival] FALSE
