--- a/r-inla.org/doc/hyper/likelihood/zeroinflatedbetabinomial0.tex
+++ b/r-inla.org/doc/hyper/likelihood/zeroinflatedbetabinomial0.tex
@@ -11,8 +11,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] gaussian
 	 	 	\item[param] 0 0.4
-	 	 	\item[to.theta] \verb|function(x) log(x/(1-x))|
-	 	 	\item[from.theta] \verb|function(x) exp(x)/(1+exp(x))|
+	 	 	\item[to.theta] \verb!function(x) log(x/(1-x))!
+	 	 	\item[from.theta] \verb!function(x) exp(x)/(1+exp(x))!
 	 	 \end{description}
 	 	\item[theta2]\ 
 	 	 \begin{description}
@@ -22,8 +22,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] gaussian
 	 	 	\item[param] -1 0.2
-	 	 	\item[to.theta] \verb|function(x) log(x/(1-x))|
-	 	 	\item[from.theta] \verb|function(x) exp(x)/(1+exp(x))|
+	 	 	\item[to.theta] \verb!function(x) log(x/(1-x))!
+	 	 	\item[from.theta] \verb!function(x) exp(x)/(1+exp(x))!
 	 	 \end{description}
 	 \end{description}
 	\item[survival] FALSE
