--- a/r-inla.org/doc/hyper/likelihood/zeroinflatedbinomial2.tex
+++ b/r-inla.org/doc/hyper/likelihood/zeroinflatedbinomial2.tex
@@ -11,8 +11,8 @@
 	 	 	\item[fixed] FALSE
 	 	 	\item[prior] gaussian
 	 	 	\item[param] -1 0.2
-	 	 	\item[to.theta] \verb|function(x) log(x)|
-	 	 	\item[from.theta] \verb|function(x) exp(x)|
+	 	 	\item[to.theta] \verb!function(x) log(x)!
+	 	 	\item[from.theta] \verb!function(x) exp(x)!
 	 	 \end{description}
 	 \end{description}
 	\item[survival] FALSE
